--- a/assign4/style.css
+++ b/assign4/style.css
@@ -24,7 +24,7 @@ div{
 	align-content: center;
 	height: auto;
 	width: auto;
-	border: 5px dotted white;
+	border: 5px dotted violet;
 	padding: 15px;
 	margin: 20px;
 }
