--- a/assign4/style.css
+++ b/assign4/style.css
@@ -7,6 +7,7 @@
 #heading{
 	font-family: "Calibri";
 	color: green;
+	text-align: center;
 }
 
 .photos{
@@ -20,6 +21,7 @@ body{
 	background-color: Azure;
 }
 
+
 div{
 	align-content: center;
 	height: auto;
@@ -27,4 +29,8 @@ div{
 	border: 5px dotted violet;
 	padding: 15px;
 	margin: 20px;
+}
+
+span{
+	background-color: bisque;
 }
