--- a/MIDTERMWEBSITE/style.css
+++ b/MIDTERMWEBSITE/style.css
@@ -59,6 +59,8 @@ h5{
 	border:1px solid white;
 	font-family: 'PT Mono', monospace;
 	color: chartreuse;
+	padding-left:5px;
+	padding-right:5px;
 }
 
 .ticketbutton{
@@ -126,10 +128,20 @@ h5{
 .contacttitles{
 	color:chartreuse;
 }
+
 #footercopyright{
 	color:chartreuse;
+	font-family: 'ChicagoFLFRegular'; 
+   font-weight: normal; 
+   font-style: normal; 
 }
 
+#websiteby{
+	color:white;
+	font-family: 'ChicagoFLFRegular'; 
+   font-weight: normal; 
+   font-style: normal; 
+}
 .anchor{
 	display: block;
 	height:125px;
@@ -139,4 +151,25 @@ h5{
 
 .fab{
   color: white;
+}
+.fas{
+	color:white;
+}
+.fab:hover{
+	color: chartreuse;
+	text-decoration:none;
+}
+
+.fas:hover{
+	color: chartreuse;
+	text-decoration:none;
+}
+
+.blink{
+	animation:blinkingText 1s infinite;
+}
+@keyframes blinkingText{
+	0%{opacity:0}
+	49%{opacity:0}
+	50%{opacity:1}
 }
